<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="item"
            type="com.example.domain.model.Repository" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/view_background"
        android:padding="15dp"
        tools:context=".views.RepoDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_corner"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:imgSrc="@{item.owner.avatarUrl}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@{item.owner.login}"
                    android:visibility="@{item.owner == null ? View.GONE : View.VISIBLE}" />

            </LinearLayout>

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{item.fullName}"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{item.description}"
                android:visibility="@{item.description == null ? View.GONE : View.VISIBLE}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d4d4d4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/stars_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="3dp"
                    android:text="@string/stars_label"
                    app:drawableStartCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@{item.star}"/>

                <TextView
                    android:id="@+id/forks_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawablePadding="3dp"
                    android:text="@string/forks_label"
                    app:drawableStartCompat="@drawable/ic_fork" />

                <TextView
                    android:id="@+id/forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@{item.forkCount}"/>
            </LinearLayout>

            <TextView
                android:id="@+id/updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="@{@string/update_label(item.updatedAt)}"
                android:visibility="@{item.updatedAt == null ? View.GONE : View.VISIBLE}"
                app:drawableStartCompat="@drawable/ic_updated" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="@{item.language == null ? View.GONE : View.VISIBLE}">

                <TextView
                    android:id="@+id/language_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/language_label" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.language}"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"                 />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/topic_label"
                android:visibility="@{item.topics.size()==0?View.GONE:View.VISIBLE}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topic_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:topicListData="@{item.topics}" />

            <TextView
                android:id="@+id/htmlUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@{item.htmlUrl}"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/ic_link" />
        </LinearLayout>


    </LinearLayout>
</layout>