<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.presentation.viewModel.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/view_background"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".views.MyInfoFragment">

        <LinearLayout
            android:id="@+id/init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.setInfo ? View.GONE : View.VISIBLE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_id_label"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/myInfo_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_search"
                android:drawablePadding="5dp"
                android:hint="@string/id_hint_label"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#757575"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_corner"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="@{viewModel.setInfo ? View.VISIBLE : View.GONE}">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:imgSrc="@{viewModel.myInfoUser.avatarUrl}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                style="@style/detailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.myInfoUser.name}"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.myInfoUser.name == null ? View.GONE : View.VISIBLE}" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@{viewModel.myInfoUser.login}"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/bio"
                style="@style/detailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.myInfoUser.bio}"
                android:visibility="@{viewModel.myInfoUser.bio == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="#d4d4d4" />

            <TextView
                android:id="@+id/htmlUrl"
                style="@style/detailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@{viewModel.myInfoUser.htmlUrl}"
                app:drawableStartCompat="@drawable/ic_link" />

            <TextView
                android:id="@+id/company"
                style="@style/detailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.myInfoUser.company}"
                android:visibility="@{viewModel.myInfoUser.company == null ? View.GONE : View.VISIBLE}"
                app:drawableStartCompat="@drawable/ic_business" />

            <TextView
                android:id="@+id/location"
                style="@style/detailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.myInfoUser.location}"
                android:visibility="@{viewModel.myInfoUser.location == null ? View.GONE : View.VISIBLE}"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/email"
                style="@style/detailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.myInfoUser.email}"
                android:visibility="@{viewModel.myInfoUser.email == null ? View.GONE : View.VISIBLE}"
                app:drawableStartCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/detailTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_label"
                    app:drawableStartCompat="@drawable/ic_filled_person" />

                <TextView
                    android:id="@+id/follower"
                    style="@style/detailTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.myInfoUser.followers}"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="#d4d4d4" />

                <TextView
                    style="@style/detailTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_label" />

                <TextView
                    android:id="@+id/following"
                    style="@style/detailTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.myInfoUser.following}"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>

